--- a/content/projects.html
+++ b/content/projects.html
@@ -1,3 +1,8 @@
 projects
 
-also soon :3
+<ul>
+    <li><b><a href="https://github.com/valixym/valixym.net">malinowy</a></b></li>the static site generator that powers
+    <a href="https://valixym.net">valixym.net</a>
+    <li><b><a href="https://github.com/valixym/sharkey.cr">sharkey.cr</a></b></li>an API wrapper for Sharkey, written in
+    Crystal.
+</ul>
