--- a/content/about.html
+++ b/content/about.html
@@ -1,3 +1,4 @@
 about
 
-soon :3
+Hello! My name's <b><span class="tip" title="Vi is pronounced as 'Vee'">Vi</span></b>, known online as <span class="tip"
+    title="Pronounced as 'Valium,' like the drug">Valixym</span>.
