--- a/content/index.html
+++ b/content/index.html
@@ -1,3 +1,17 @@
 the page title
 
 <b>Welcome, traveller.</b> This is the newest incarnation of my website, and I hope you're enjoying your stay here.
+
+
+
+<pre>
+        <code class="language-rust">
+// Here's some subpar Rust code to test my syntax highlighting
+use std::u8;
+
+fn main() {
+    let x: u8 = 250;
+    println!("hello, world! {}", x.to_string());
+}
+        </code>
+</pre>
