--- a/content/projects.html
+++ b/content/projects.html
@@ -1,6 +1,8 @@
 projects
 
 <ul>
+    <li><b><a href="/Layer14">Layer 14</a></b></li>an experimental attempt to recreate the <a
+        href="https://global-mind.org">Global Consciousness Project</a>.
     <li><b><a href="https://github.com/valixym/valixym.net">malinowy</a></b></li>the static site generator that powers
     <a href="https://valixym.net">valixym.net</a>
     <li><b><a href="https://github.com/valixym/sharkey.cr">sharkey.cr</a></b></li>an API wrapper for Sharkey, written in
