--- a/content/help.html
+++ b/content/help.html
@@ -1,7 +1,7 @@
 how to use valixym.net
 
 The previous version of my website had some obscure features that went undocumented. I figured it would be a cool idea
-to list the features on my new site in a central help line.
+to list the features on my new site in a central help file.
 <br /><br />
 <h3>pro-tips</h3>
 When you see text that looks like <span class="tip" title="blah blah blah">this</span>, it's a pro-tip. It serves as a
