--- a/content/about.html
+++ b/content/about.html
@@ -1,4 +1,6 @@
 about
 
 Hello! My name's <b><span class="tip" title="Vi is pronounced as 'Vee'">Vi</span></b>, known online as <span class="tip"
-    title="Pronounced as 'Valium,' like the drug">Valixym</span>.
+    title="Pronounced as 'Valium,' like the drug">Valixym</span>. If it's important, my pronouns are <span class="tip"
+    title="pronounced as vee and vizz">vi/vis.</span> This is the most egotistical of all pronouns, as it forces you to
+say my name over and over again.
